# Modelo_predictor_de_clientes

./: README.md  ejemplo-false.json  ejemplo-true.json  notebook.ipynb  pyproject.toml
models/: potencial-client-model.pck
predictor_cliente/: churn_predict_app.py  churn_predict_service.py
tests/: test_predictor_cliente.py
