[tool.poetry]
name = "Modelo_predictor_de_clientes"
version = "1.0.0"
description = ""
authors = ["Manuel Chacon De Dios <machde.edu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
ipykernel = "^6.9.1"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
